--- a/candidate-match/src/main/resources/application-prod.yaml
+++ b/candidate-match/src/main/resources/application-prod.yaml
@@ -20,6 +20,7 @@ spring:
       idle-timeout: 300000
       max-lifetime: 1200000
       validation-timeout: 5000
+      schema: public
   liquibase:
     change-log: classpath:/db/changelog/db.changelog-master.xml
     enabled: true
