refactor(security): simplify SecurityConfig and fix 403s
- Remove ApiPrefixForwardFilter to avoid double-path confusion
- Add global /api servlet path in application.yaml (spring.mvc.servlet.path)
- Simplify SecurityConfig with concise PUBLIC_ANY and PUBLIC_POST arrays
- Move CORS to property-driven configuration via CorsConfig
- Keep permissive LocalSecurityConfig for local development
- Expose X-Total-Count in CORS for frontend table pagination

This eliminates 403s on POST /api/cv-score/{id}/run, /api/project-requests/upload
and other mutating operations by having cleaner, single-path routing.

--- a/candidate-match/src/main/resources/application-prod.yaml
+++ b/candidate-match/src/main/resources/application-prod.yaml
@@ -114,3 +114,8 @@ management:
 logging:
   level:
     no.cloudberries.candidatematch: INFO # Setter DEBUG-logging for din kode
+
+cors:
+  allowed-origins: >
+    https://delightful-meadow-056d48003.1.azurestaticapps.net,
+    https://cloudberries-candidate-match-ca.whitesand-767916af.westeurope.azurecontainerapps.io
