--- a/candidate-match/src/main/resources/application-local.yaml
+++ b/candidate-match/src/main/resources/application-local.yaml
@@ -72,6 +72,14 @@ spring:
       max-file-size: 10MB
       resolve-lazily: true
       location: /tmp/uploads
+
+cors:
+  allowed-origins: >
+    https://delightful-meadow-056d48003.1.azurestaticapps.net,
+    https://cloudberries-candidate-match-ca.whitesand-767916af.westeurope.azurecontainerapps.io,
+    http://localhost:5173,
+    http://localhost:5174,
+    http://localhost:8080
   liquibase:
     change-log: classpath*:/db/changelog/db.changelog-master.xml
     contexts: "default,local,pgvector"
