--- a/candidate-match/src/main/resources/application.yaml
+++ b/candidate-match/src/main/resources/application.yaml
@@ -1,4 +1,7 @@
 spring:
+  mvc:
+    servlet:
+      path: /api
   servlet:
     multipart:
       enabled: true
@@ -16,6 +19,14 @@ spring:
       validation-timeout: 5000      # 5 seconds
   liquibase:
     change-log: classpath:/db/changelog/db.changelog-master.xml
+
+cors:
+  allowed-origins: >
+    https://delightful-meadow-056d48003.1.azurestaticapps.net,
+    https://cloudberries-candidate-match-ca.whitesand-767916af.westeurope.azurecontainerapps.io,
+    http://localhost:5173,
+    http://localhost:5174,
+    http://localhost:8080
 flowcase:
   apiKey: ${FLOWCASE_API_KEY}
   baseUrl: ${FLOWCASE_BASE_URL}
