--- a/candidate-match/src/main/resources/application-local.yaml
+++ b/candidate-match/src/main/resources/application-local.yaml
@@ -72,14 +72,6 @@ spring:
       max-file-size: 10MB
       resolve-lazily: true
       location: /tmp/uploads
-
-cors:
-  allowed-origins: >
-    https://delightful-meadow-056d48003.1.azurestaticapps.net,
-    https://cloudberries-candidate-match-ca.whitesand-767916af.westeurope.azurecontainerapps.io,
-    http://localhost:5173,
-    http://localhost:5174,
-    http://localhost:8080
   liquibase:
     change-log: classpath*:/db/changelog/db.changelog-master.xml
     contexts: "default,local,pgvector"
@@ -115,6 +107,14 @@ cors:
     init:
       schema-locations: classpath:/db/changelog/schema.sql
 
+cors:
+  allowed-origins: >
+    https://delightful-meadow-056d48003.1.azurestaticapps.net,
+    https://cloudberries-candidate-match-ca.whitesand-767916af.westeurope.azurecontainerapps.io,
+    http://localhost:5173,
+    http://localhost:5174,
+    http://localhost:8080
 logging:
   level:
     no.cloudberries.candidatematch: INFO # Setter DEBUG-logging for din kode
+    org.springframework.security=DEBUG:
