--- a/candidate-match/src/main/resources/application-prod.yaml
+++ b/candidate-match/src/main/resources/application-prod.yaml
@@ -9,6 +9,7 @@ spring:
       max-file-size: 10MB
       max-request-size: 10MB
       resolve-lazily: true
+      location: /tmp/uploads
   datasource:
     url: jdbc:postgresql://cloudberries-candidate-match-pgdb.postgres.database.azure.com:5432/candidatematch?sslmode=require
     username: candidatematch
@@ -114,6 +115,8 @@ management:
 logging:
   level:
     no.cloudberries.candidatematch: INFO # Setter DEBUG-logging for din kode
+    org.springframework.security=DEBUG:
+
 
 cors:
   allowed-origins: >
