chore: add /api to the -prod.yaml config and time the healthcheckers and change to a gemini flash model

--- a/candidate-match/src/main/resources/application-prod.yaml
+++ b/candidate-match/src/main/resources/application-prod.yaml
@@ -2,6 +2,7 @@ server:
   forward-headers-strategy: framework
 
 spring:
+
   servlet:
     multipart:
       enabled: true
@@ -26,6 +27,9 @@ spring:
     change-log: classpath:/db/changelog/db.changelog-master.xml
     enabled: true
     contexts: "default,pgvector"
+  mvc:
+    servlet:
+      path: /api
 
 # Make external services optional
 flowcase:
