add mappings to endpoints

--- a/candidate-match/src/main/resources/application-prod.yaml
+++ b/candidate-match/src/main/resources/application-prod.yaml
@@ -101,7 +101,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: "health"
+        include: mappings,health
   endpoint:
     health:
       probes:
