Adding consumes text/plain to the `PostMapping` endpoint analyze.

--- a/candidate-match/src/main/resources/application-prod.yaml
+++ b/candidate-match/src/main/resources/application-prod.yaml
@@ -2,7 +2,6 @@ server:
   forward-headers-strategy: framework
 
 spring:
-
   servlet:
     multipart:
       enabled: true
@@ -27,6 +26,10 @@ spring:
     change-log: classpath:/db/changelog/db.changelog-master.xml
     enabled: true
     contexts: "default,pgvector"
+  mvc:
+    servlet:
+      path: /api
+# application-prod.yml
 
 # Make external services optional
 flowcase:
