--- a/candidate-match/src/main/resources/application-prod.yaml
+++ b/candidate-match/src/main/resources/application-prod.yaml
@@ -93,7 +93,7 @@ search:
     read-timeout-seconds: 120
     write-timeout-seconds: 10
 projectrequest:
-  analysis:
+  analysis:777
     ai-enabled: true
     provider: GEMINI
 sync:
