feat: Implement Gemini Files API batch matching with CV upload and caching
Major features:
- Add GeminiFilesMatchingService for batch consultant ranking using Files API
- Implement CV to Markdown conversion with CvToMarkdownConverter
- Add GeminiFilesApiAdapter for file upload and batch ranking with fallback
- Store Gemini file URIs in consultant_cv table for caching
- Configure async execution for background matching with @Async

Technical changes:
- New AsyncConfig with ThreadPoolTaskExecutor for @Async methods
- Add gemini_file_uri column to consultant_cv table (Liquibase migration)
- Update application config with gemini.matchingModel and gemini.flashModel
- Implement automatic fallback from gemini-2.5-pro to gemini-2.5-flash on 503 errors
- ProjectMatchingServiceImpl now triggers background matching on project upload
- ConsultantWithCvService enhanced with getAllConsultantsWithCvs() for matching

Test improvements:
- Add ProjectMatchingBatchIntegrationTest (manual integration test)
- Fix HealthServiceTest mocks for isHealthy() and isConfigured() methods
- Add test-specific application-local.yaml to exclude pgvector context
- Update db_changelog-11.0-ai-rag.xml with pgvector context guard
- Add comprehensive test documentation in matches/service/README.md

Configuration:
- Dual model strategy: gemini-2.5-pro (primary) and gemini-2.5-flash (fallback)
- CV caching via Gemini file URIs to reduce API calls and costs
- Batch processing for efficient consultant ranking (single API call vs sequential)
- Top N configurable via matching.topN property

Documentation:
- Add GEMINI_FILES_API_BATCH_MATCHING.md with implementation details
- Add GEMINI_MODEL_STRATEGY.md explaining dual model approach
- Add BATCH_MATCHING_TESTING_GUIDE.md and QUICK_START.md
- Add inline code documentation and service layer comments

All tests passing: 90 tests, 0 failures, 0 errors

--- a/candidate-match/src/main/resources/application.yaml
+++ b/candidate-match/src/main/resources/application.yaml
@@ -36,9 +36,14 @@ openai:
   assistantId: ${OPENAI_ASSISTANT_ID}
 gemini:
   apiKey: ${GEMINI_API_KEY}
-  model: gemini-1.5-pro  # Gemini 1.5 Pro (stable) for single CV scoring
-  flashModel: gemini-2.0-flash-exp
-  fileStoreName: not-used  # We use inline CVs, not File Search
+  # Model for project analysis (PDF/requirement extraction)
+  model: ${GEMINI_MODEL:gemini-3-pro-preview}
+  # Model for batch candidate ranking (stable, high capacity)
+  matchingModel: ${GEMINI_MATCHING_MODEL:gemini-2.5-pro}
+  # Fast model for quick operations
+  flashModel: ${GEMINI_FLASH_MODEL:gemini-2.5-flash}
+  fileStoreName: ${GEMINI_FILESTORE_NAME:candidate-cv-store}
+  useFilesApi: ${GEMINI_USE_FILES_API:true}
 embedding:
   enabled: true
   provider: GEMINI
@@ -49,7 +54,10 @@ matching:
   provider: GEMINI
   topN: 10
   enabled: true
-  model: ${MATCHING_MODEL:gemini-1.5-pro}  # Gemini 1.5 Pro (stable) for batch candidate ranking
+  # Model for candidate ranking - use environment variable to override
+  # Recommended: gemini-2.5-flash (fast + good quality for batch)
+  # Options: gemini-2.5-pro (best quality), gemini-2.5-flash (fast), gemini-2.0-flash-001 (stable)
+  model: ${MATCHING_MODEL:gemini-2.5-flash}
   timeout: 600000  # 10 minutes for batch matching (in milliseconds)
 
 management:
