Feature/match candidate to project request (#33)
* remove .env

* feat: Implement Gemini Files API batch matching with CV upload and caching

Major features:
- Add GeminiFilesMatchingService for batch consultant ranking using Files API
- Implement CV to Markdown conversion with CvToMarkdownConverter
- Add GeminiFilesApiAdapter for file upload and batch ranking with fallback
- Store Gemini file URIs in consultant_cv table for caching
- Configure async execution for background matching with @Async

Technical changes:
- New AsyncConfig with ThreadPoolTaskExecutor for @Async methods
- Add gemini_file_uri column to consultant_cv table (Liquibase migration)
- Update application config with gemini.matchingModel and gemini.flashModel
- Implement automatic fallback from gemini-2.5-pro to gemini-2.5-flash on 503 errors
- ProjectMatchingServiceImpl now triggers background matching on project upload
- ConsultantWithCvService enhanced with getAllConsultantsWithCvs() for matching

Test improvements:
- Add ProjectMatchingBatchIntegrationTest (manual integration test)
- Fix HealthServiceTest mocks for isHealthy() and isConfigured() methods
- Add test-specific application-local.yaml to exclude pgvector context
- Update db_changelog-11.0-ai-rag.xml with pgvector context guard
- Add comprehensive test documentation in matches/service/README.md

Configuration:
- Dual model strategy: gemini-2.5-pro (primary) and gemini-2.5-flash (fallback)
- CV caching via Gemini file URIs to reduce API calls and costs
- Batch processing for efficient consultant ranking (single API call vs sequential)
- Top N configurable via matching.topN property

Documentation:
- Add GEMINI_FILES_API_BATCH_MATCHING.md with implementation details
- Add GEMINI_MODEL_STRATEGY.md explaining dual model approach
- Add BATCH_MATCHING_TESTING_GUIDE.md and QUICK_START.md
- Add inline code documentation and service layer comments

All tests passing: 90 tests, 0 failures, 0 errors

* remove zip folder

--- a/candidate-match/src/main/resources/application-local.yaml
+++ b/candidate-match/src/main/resources/application-local.yaml
@@ -43,8 +43,22 @@ openai:
 
 gemini:
   apiKey: ${GEMINI_API_KEY}
-  model: gemini-2.5-pro
-  quick-model: gemini-2.5-flash
+  
+  # Model for project analysis (PDF upload, Må/Bør-krav extraction)
+  # gemini-3-pro-preview gives best quality but has capacity limits
+  # For PDF analysis, this model is used
+  model: gemini-3-pro-preview
+  
+  # Model for candidate ranking (batch operations via Files API)
+  # PRIMARY: gemini-2.5-pro - stable, 2M context, high rate limits
+  # This is used as the first choice for batch ranking
+  matchingModel: gemini-2.5-pro
+  
+  # FALLBACK: gemini-2.5-flash - fast, used if matchingModel returns 503
+  flashModel: gemini-2.5-flash
+  
+  fileStoreName: candidate-cv-store
+  useFilesApi: true  # MUST be true for Files API batch matching
 
 embedding:
   enabled: true
@@ -102,6 +116,14 @@ projectrequest:
 sync:
   consultants:
     on-startup: true
+
+matching:
+  provider: GEMINI
+  topN: 10
+  enabled: true
+  # Model is now configured in gemini.matchingModel above
+  # This setting is kept for backwards compatibility but gemini.matchingModel takes precedence
+  model: gemini-2.5-pro  # Stable workhorse for batch operations
 
 management:
   endpoints:
