--- a/candidate-match/src/main/resources/application.yaml
+++ b/candidate-match/src/main/resources/application.yaml
@@ -9,6 +9,13 @@ spring:
       max-file-size: 10MB
       max-request-size: 10MB
       resolve-lazily: true
+  task:
+    execution:
+      pool:
+        core-size: 5
+        max-size: 10
+        queue-capacity: 100
+      thread-name-prefix: async-matching-
   datasource:
     hikari:
       maximum-pool-size: 10         # Increase from default 5
@@ -29,12 +36,29 @@ openai:
   assistantId: ${OPENAI_ASSISTANT_ID}
 gemini:
   apiKey: ${GEMINI_API_KEY}
-  model: gemini-2.5-pro
+  # Model for project analysis (PDF/requirement extraction)
+  model: ${GEMINI_MODEL:gemini-3-pro-preview}
+  # Model for batch candidate ranking (stable, high capacity)
+  matchingModel: ${GEMINI_MATCHING_MODEL:gemini-2.5-pro}
+  # Fast model for quick operations
+  flashModel: ${GEMINI_FLASH_MODEL:gemini-2.5-flash}
+  fileStoreName: ${GEMINI_FILESTORE_NAME:candidate-cv-store}
+  useFilesApi: ${GEMINI_USE_FILES_API:true}
 embedding:
   enabled: true
   provider: GEMINI
   model: text-embedding-004
   dimension: 768
+
+matching:
+  provider: GEMINI
+  topN: 10
+  enabled: true
+  # Model for candidate ranking - use environment variable to override
+  # Recommended: gemini-2.5-flash (fast + good quality for batch)
+  # Options: gemini-2.5-pro (best quality), gemini-2.5-flash (fast), gemini-2.0-flash-001 (stable)
+  model: ${MATCHING_MODEL:gemini-2.5-flash}
+  timeout: 600000  # 10 minutes for batch matching (in milliseconds)
 
 management:
   endpoints:
