--- a/candidate-match/src/main/resources/application-local.yaml
+++ b/candidate-match/src/main/resources/application-local.yaml
@@ -60,6 +60,11 @@ gemini:
   fileStoreName: candidate-cv-store
   useFilesApi: true  # MUST be true for Files API batch matching
 
+anthropic:
+  apiKey: ${ANTHROPIC_API_KEY}
+  model: ${ANTHROPIC_MODEL:claude-3-5-sonnet-20241022}
+  baseUrl: ${ANTHROPIC_BASE_URL:https://api.anthropic.com}
+
 embedding:
   enabled: true
   provider: GEMINI
