--- a/candidate-match/src/main/resources/application-prod.yaml
+++ b/candidate-match/src/main/resources/application-prod.yaml
@@ -45,6 +45,11 @@ gemini:
   apiKey: ${GEMINI_API_KEY}
   model: gemini-2.5-pro
 
+anthropic:
+  apiKey: ${ANTHROPIC_API_KEY}
+  model: ${ANTHROPIC_MODEL:claude-3-5-sonnet-20241022}
+  baseUrl: ${ANTHROPIC_BASE_URL:https://api.anthropic.com}
+
 embedding:
   enabled: true
   provider: GEMINI
